Module 1/Module1.4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> BEGIN THEADOPEN skiptag THEADCLOSE OPENTABLE getdata
Rule 2     skiptag -> GARBAGE skiptag
Rule 3     skiptag -> PATTERN skiptag
Rule 4     skiptag -> CONTENT skiptag
Rule 5     skiptag -> OPENROW skiptag
Rule 6     skiptag -> CLOSEROW skiptag
Rule 7     skiptag -> OPENDATA skiptag
Rule 8     skiptag -> CLOSEDATA skiptag
Rule 9     skiptag -> OPENHEADER skiptag
Rule 10    skiptag -> CLOSEHEADER skiptag
Rule 11    skiptag -> <empty>
Rule 12    getdata -> OPENROW handledata CLOSEROW getdata
Rule 13    getdata -> <empty>
Rule 14    handledata -> onlydata handledata
Rule 15    handledata -> <empty>
Rule 16    comment -> GARBAGE
Rule 17    comment -> <empty>
Rule 18    onlydata -> OPENDATA CLOSEDATA comment
Rule 19    onlydata -> OPENDATA GARBAGE CONTENT GARBAGE CLOSEDATA comment
Rule 20    onlydata -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA comment
Rule 21    onlydata -> OPENDATA OPENHREF CONTENT PATTERN CONTENT CLOSEHREF CLOSEDATA comment
Rule 22    onlydata -> OPENDATA GARBAGE GARBAGE CLOSEDATA comment
Rule 23    onlydata -> OPENDATA CONTENT CLOSEDATA comment

Terminals, with rules where they appear

BEGIN                : 1
CLOSEDATA            : 8 18 19 20 21 22 23
CLOSEHEADER          : 10
CLOSEHREF            : 20 21
CLOSEROW             : 6 12
CONTENT              : 4 19 20 21 21 23
GARBAGE              : 2 16 19 19 22 22
OPENDATA             : 7 18 19 20 21 22 23
OPENHEADER           : 9
OPENHREF             : 20 21
OPENROW              : 5 12
OPENTABLE            : 1
PATTERN              : 3 21
THEADCLOSE           : 1
THEADOPEN            : 1
error                : 

Nonterminals, with rules where they appear

comment              : 18 19 20 21 22 23
getdata              : 1 12
handledata           : 12 14
onlydata             : 14
skiptag              : 1 2 3 4 5 6 7 8 9 10
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . BEGIN THEADOPEN skiptag THEADCLOSE OPENTABLE getdata

    BEGIN           shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> BEGIN . THEADOPEN skiptag THEADCLOSE OPENTABLE getdata

    THEADOPEN       shift and go to state 3


state 3

    (1) start -> BEGIN THEADOPEN . skiptag THEADCLOSE OPENTABLE getdata
    (2) skiptag -> . GARBAGE skiptag
    (3) skiptag -> . PATTERN skiptag
    (4) skiptag -> . CONTENT skiptag
    (5) skiptag -> . OPENROW skiptag
    (6) skiptag -> . CLOSEROW skiptag
    (7) skiptag -> . OPENDATA skiptag
    (8) skiptag -> . CLOSEDATA skiptag
    (9) skiptag -> . OPENHEADER skiptag
    (10) skiptag -> . CLOSEHEADER skiptag
    (11) skiptag -> .

    GARBAGE         shift and go to state 5
    PATTERN         shift and go to state 6
    CONTENT         shift and go to state 7
    OPENROW         shift and go to state 8
    CLOSEROW        shift and go to state 9
    OPENDATA        shift and go to state 10
    CLOSEDATA       shift and go to state 11
    OPENHEADER      shift and go to state 12
    CLOSEHEADER     shift and go to state 13
    THEADCLOSE      reduce using rule 11 (skiptag -> .)

    skiptag                        shift and go to state 4

state 4

    (1) start -> BEGIN THEADOPEN skiptag . THEADCLOSE OPENTABLE getdata

    THEADCLOSE      shift and go to state 14


state 5

    (2) skiptag -> GARBAGE . skiptag
    (2) skiptag -> . GARBAGE skiptag
    (3) skiptag -> . PATTERN skiptag
    (4) skiptag -> . CONTENT skiptag
    (5) skiptag -> . OPENROW skiptag
    (6) skiptag -> . CLOSEROW skiptag
    (7) skiptag -> . OPENDATA skiptag
    (8) skiptag -> . CLOSEDATA skiptag
    (9) skiptag -> . OPENHEADER skiptag
    (10) skiptag -> . CLOSEHEADER skiptag
    (11) skiptag -> .

    GARBAGE         shift and go to state 5
    PATTERN         shift and go to state 6
    CONTENT         shift and go to state 7
    OPENROW         shift and go to state 8
    CLOSEROW        shift and go to state 9
    OPENDATA        shift and go to state 10
    CLOSEDATA       shift and go to state 11
    OPENHEADER      shift and go to state 12
    CLOSEHEADER     shift and go to state 13
    THEADCLOSE      reduce using rule 11 (skiptag -> .)

    skiptag                        shift and go to state 15

state 6

    (3) skiptag -> PATTERN . skiptag
    (2) skiptag -> . GARBAGE skiptag
    (3) skiptag -> . PATTERN skiptag
    (4) skiptag -> . CONTENT skiptag
    (5) skiptag -> . OPENROW skiptag
    (6) skiptag -> . CLOSEROW skiptag
    (7) skiptag -> . OPENDATA skiptag
    (8) skiptag -> . CLOSEDATA skiptag
    (9) skiptag -> . OPENHEADER skiptag
    (10) skiptag -> . CLOSEHEADER skiptag
    (11) skiptag -> .

    GARBAGE         shift and go to state 5
    PATTERN         shift and go to state 6
    CONTENT         shift and go to state 7
    OPENROW         shift and go to state 8
    CLOSEROW        shift and go to state 9
    OPENDATA        shift and go to state 10
    CLOSEDATA       shift and go to state 11
    OPENHEADER      shift and go to state 12
    CLOSEHEADER     shift and go to state 13
    THEADCLOSE      reduce using rule 11 (skiptag -> .)

    skiptag                        shift and go to state 16

state 7

    (4) skiptag -> CONTENT . skiptag
    (2) skiptag -> . GARBAGE skiptag
    (3) skiptag -> . PATTERN skiptag
    (4) skiptag -> . CONTENT skiptag
    (5) skiptag -> . OPENROW skiptag
    (6) skiptag -> . CLOSEROW skiptag
    (7) skiptag -> . OPENDATA skiptag
    (8) skiptag -> . CLOSEDATA skiptag
    (9) skiptag -> . OPENHEADER skiptag
    (10) skiptag -> . CLOSEHEADER skiptag
    (11) skiptag -> .

    GARBAGE         shift and go to state 5
    PATTERN         shift and go to state 6
    CONTENT         shift and go to state 7
    OPENROW         shift and go to state 8
    CLOSEROW        shift and go to state 9
    OPENDATA        shift and go to state 10
    CLOSEDATA       shift and go to state 11
    OPENHEADER      shift and go to state 12
    CLOSEHEADER     shift and go to state 13
    THEADCLOSE      reduce using rule 11 (skiptag -> .)

    skiptag                        shift and go to state 17

state 8

    (5) skiptag -> OPENROW . skiptag
    (2) skiptag -> . GARBAGE skiptag
    (3) skiptag -> . PATTERN skiptag
    (4) skiptag -> . CONTENT skiptag
    (5) skiptag -> . OPENROW skiptag
    (6) skiptag -> . CLOSEROW skiptag
    (7) skiptag -> . OPENDATA skiptag
    (8) skiptag -> . CLOSEDATA skiptag
    (9) skiptag -> . OPENHEADER skiptag
    (10) skiptag -> . CLOSEHEADER skiptag
    (11) skiptag -> .

    GARBAGE         shift and go to state 5
    PATTERN         shift and go to state 6
    CONTENT         shift and go to state 7
    OPENROW         shift and go to state 8
    CLOSEROW        shift and go to state 9
    OPENDATA        shift and go to state 10
    CLOSEDATA       shift and go to state 11
    OPENHEADER      shift and go to state 12
    CLOSEHEADER     shift and go to state 13
    THEADCLOSE      reduce using rule 11 (skiptag -> .)

    skiptag                        shift and go to state 18

state 9

    (6) skiptag -> CLOSEROW . skiptag
    (2) skiptag -> . GARBAGE skiptag
    (3) skiptag -> . PATTERN skiptag
    (4) skiptag -> . CONTENT skiptag
    (5) skiptag -> . OPENROW skiptag
    (6) skiptag -> . CLOSEROW skiptag
    (7) skiptag -> . OPENDATA skiptag
    (8) skiptag -> . CLOSEDATA skiptag
    (9) skiptag -> . OPENHEADER skiptag
    (10) skiptag -> . CLOSEHEADER skiptag
    (11) skiptag -> .

    GARBAGE         shift and go to state 5
    PATTERN         shift and go to state 6
    CONTENT         shift and go to state 7
    OPENROW         shift and go to state 8
    CLOSEROW        shift and go to state 9
    OPENDATA        shift and go to state 10
    CLOSEDATA       shift and go to state 11
    OPENHEADER      shift and go to state 12
    CLOSEHEADER     shift and go to state 13
    THEADCLOSE      reduce using rule 11 (skiptag -> .)

    skiptag                        shift and go to state 19

state 10

    (7) skiptag -> OPENDATA . skiptag
    (2) skiptag -> . GARBAGE skiptag
    (3) skiptag -> . PATTERN skiptag
    (4) skiptag -> . CONTENT skiptag
    (5) skiptag -> . OPENROW skiptag
    (6) skiptag -> . CLOSEROW skiptag
    (7) skiptag -> . OPENDATA skiptag
    (8) skiptag -> . CLOSEDATA skiptag
    (9) skiptag -> . OPENHEADER skiptag
    (10) skiptag -> . CLOSEHEADER skiptag
    (11) skiptag -> .

    GARBAGE         shift and go to state 5
    PATTERN         shift and go to state 6
    CONTENT         shift and go to state 7
    OPENROW         shift and go to state 8
    CLOSEROW        shift and go to state 9
    OPENDATA        shift and go to state 10
    CLOSEDATA       shift and go to state 11
    OPENHEADER      shift and go to state 12
    CLOSEHEADER     shift and go to state 13
    THEADCLOSE      reduce using rule 11 (skiptag -> .)

    skiptag                        shift and go to state 20

state 11

    (8) skiptag -> CLOSEDATA . skiptag
    (2) skiptag -> . GARBAGE skiptag
    (3) skiptag -> . PATTERN skiptag
    (4) skiptag -> . CONTENT skiptag
    (5) skiptag -> . OPENROW skiptag
    (6) skiptag -> . CLOSEROW skiptag
    (7) skiptag -> . OPENDATA skiptag
    (8) skiptag -> . CLOSEDATA skiptag
    (9) skiptag -> . OPENHEADER skiptag
    (10) skiptag -> . CLOSEHEADER skiptag
    (11) skiptag -> .

    GARBAGE         shift and go to state 5
    PATTERN         shift and go to state 6
    CONTENT         shift and go to state 7
    OPENROW         shift and go to state 8
    CLOSEROW        shift and go to state 9
    OPENDATA        shift and go to state 10
    CLOSEDATA       shift and go to state 11
    OPENHEADER      shift and go to state 12
    CLOSEHEADER     shift and go to state 13
    THEADCLOSE      reduce using rule 11 (skiptag -> .)

    skiptag                        shift and go to state 21

state 12

    (9) skiptag -> OPENHEADER . skiptag
    (2) skiptag -> . GARBAGE skiptag
    (3) skiptag -> . PATTERN skiptag
    (4) skiptag -> . CONTENT skiptag
    (5) skiptag -> . OPENROW skiptag
    (6) skiptag -> . CLOSEROW skiptag
    (7) skiptag -> . OPENDATA skiptag
    (8) skiptag -> . CLOSEDATA skiptag
    (9) skiptag -> . OPENHEADER skiptag
    (10) skiptag -> . CLOSEHEADER skiptag
    (11) skiptag -> .

    GARBAGE         shift and go to state 5
    PATTERN         shift and go to state 6
    CONTENT         shift and go to state 7
    OPENROW         shift and go to state 8
    CLOSEROW        shift and go to state 9
    OPENDATA        shift and go to state 10
    CLOSEDATA       shift and go to state 11
    OPENHEADER      shift and go to state 12
    CLOSEHEADER     shift and go to state 13
    THEADCLOSE      reduce using rule 11 (skiptag -> .)

    skiptag                        shift and go to state 22

state 13

    (10) skiptag -> CLOSEHEADER . skiptag
    (2) skiptag -> . GARBAGE skiptag
    (3) skiptag -> . PATTERN skiptag
    (4) skiptag -> . CONTENT skiptag
    (5) skiptag -> . OPENROW skiptag
    (6) skiptag -> . CLOSEROW skiptag
    (7) skiptag -> . OPENDATA skiptag
    (8) skiptag -> . CLOSEDATA skiptag
    (9) skiptag -> . OPENHEADER skiptag
    (10) skiptag -> . CLOSEHEADER skiptag
    (11) skiptag -> .

    GARBAGE         shift and go to state 5
    PATTERN         shift and go to state 6
    CONTENT         shift and go to state 7
    OPENROW         shift and go to state 8
    CLOSEROW        shift and go to state 9
    OPENDATA        shift and go to state 10
    CLOSEDATA       shift and go to state 11
    OPENHEADER      shift and go to state 12
    CLOSEHEADER     shift and go to state 13
    THEADCLOSE      reduce using rule 11 (skiptag -> .)

    skiptag                        shift and go to state 23

state 14

    (1) start -> BEGIN THEADOPEN skiptag THEADCLOSE . OPENTABLE getdata

    OPENTABLE       shift and go to state 24


state 15

    (2) skiptag -> GARBAGE skiptag .

    THEADCLOSE      reduce using rule 2 (skiptag -> GARBAGE skiptag .)


state 16

    (3) skiptag -> PATTERN skiptag .

    THEADCLOSE      reduce using rule 3 (skiptag -> PATTERN skiptag .)


state 17

    (4) skiptag -> CONTENT skiptag .

    THEADCLOSE      reduce using rule 4 (skiptag -> CONTENT skiptag .)


state 18

    (5) skiptag -> OPENROW skiptag .

    THEADCLOSE      reduce using rule 5 (skiptag -> OPENROW skiptag .)


state 19

    (6) skiptag -> CLOSEROW skiptag .

    THEADCLOSE      reduce using rule 6 (skiptag -> CLOSEROW skiptag .)


state 20

    (7) skiptag -> OPENDATA skiptag .

    THEADCLOSE      reduce using rule 7 (skiptag -> OPENDATA skiptag .)


state 21

    (8) skiptag -> CLOSEDATA skiptag .

    THEADCLOSE      reduce using rule 8 (skiptag -> CLOSEDATA skiptag .)


state 22

    (9) skiptag -> OPENHEADER skiptag .

    THEADCLOSE      reduce using rule 9 (skiptag -> OPENHEADER skiptag .)


state 23

    (10) skiptag -> CLOSEHEADER skiptag .

    THEADCLOSE      reduce using rule 10 (skiptag -> CLOSEHEADER skiptag .)


state 24

    (1) start -> BEGIN THEADOPEN skiptag THEADCLOSE OPENTABLE . getdata
    (12) getdata -> . OPENROW handledata CLOSEROW getdata
    (13) getdata -> .

    OPENROW         shift and go to state 26
    $end            reduce using rule 13 (getdata -> .)

    getdata                        shift and go to state 25

state 25

    (1) start -> BEGIN THEADOPEN skiptag THEADCLOSE OPENTABLE getdata .

    $end            reduce using rule 1 (start -> BEGIN THEADOPEN skiptag THEADCLOSE OPENTABLE getdata .)


state 26

    (12) getdata -> OPENROW . handledata CLOSEROW getdata
    (14) handledata -> . onlydata handledata
    (15) handledata -> .
    (18) onlydata -> . OPENDATA CLOSEDATA comment
    (19) onlydata -> . OPENDATA GARBAGE CONTENT GARBAGE CLOSEDATA comment
    (20) onlydata -> . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA comment
    (21) onlydata -> . OPENDATA OPENHREF CONTENT PATTERN CONTENT CLOSEHREF CLOSEDATA comment
    (22) onlydata -> . OPENDATA GARBAGE GARBAGE CLOSEDATA comment
    (23) onlydata -> . OPENDATA CONTENT CLOSEDATA comment

    CLOSEROW        reduce using rule 15 (handledata -> .)
    OPENDATA        shift and go to state 29

    handledata                     shift and go to state 27
    onlydata                       shift and go to state 28

state 27

    (12) getdata -> OPENROW handledata . CLOSEROW getdata

    CLOSEROW        shift and go to state 30


state 28

    (14) handledata -> onlydata . handledata
    (14) handledata -> . onlydata handledata
    (15) handledata -> .
    (18) onlydata -> . OPENDATA CLOSEDATA comment
    (19) onlydata -> . OPENDATA GARBAGE CONTENT GARBAGE CLOSEDATA comment
    (20) onlydata -> . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA comment
    (21) onlydata -> . OPENDATA OPENHREF CONTENT PATTERN CONTENT CLOSEHREF CLOSEDATA comment
    (22) onlydata -> . OPENDATA GARBAGE GARBAGE CLOSEDATA comment
    (23) onlydata -> . OPENDATA CONTENT CLOSEDATA comment

    CLOSEROW        reduce using rule 15 (handledata -> .)
    OPENDATA        shift and go to state 29

    onlydata                       shift and go to state 28
    handledata                     shift and go to state 31

state 29

    (18) onlydata -> OPENDATA . CLOSEDATA comment
    (19) onlydata -> OPENDATA . GARBAGE CONTENT GARBAGE CLOSEDATA comment
    (20) onlydata -> OPENDATA . OPENHREF CONTENT CLOSEHREF CLOSEDATA comment
    (21) onlydata -> OPENDATA . OPENHREF CONTENT PATTERN CONTENT CLOSEHREF CLOSEDATA comment
    (22) onlydata -> OPENDATA . GARBAGE GARBAGE CLOSEDATA comment
    (23) onlydata -> OPENDATA . CONTENT CLOSEDATA comment

    CLOSEDATA       shift and go to state 32
    GARBAGE         shift and go to state 33
    OPENHREF        shift and go to state 35
    CONTENT         shift and go to state 34


state 30

    (12) getdata -> OPENROW handledata CLOSEROW . getdata
    (12) getdata -> . OPENROW handledata CLOSEROW getdata
    (13) getdata -> .

    OPENROW         shift and go to state 26
    $end            reduce using rule 13 (getdata -> .)

    getdata                        shift and go to state 36

state 31

    (14) handledata -> onlydata handledata .

    CLOSEROW        reduce using rule 14 (handledata -> onlydata handledata .)


state 32

    (18) onlydata -> OPENDATA CLOSEDATA . comment
    (16) comment -> . GARBAGE
    (17) comment -> .

    GARBAGE         shift and go to state 38
    OPENDATA        reduce using rule 17 (comment -> .)
    CLOSEROW        reduce using rule 17 (comment -> .)

    comment                        shift and go to state 37

state 33

    (19) onlydata -> OPENDATA GARBAGE . CONTENT GARBAGE CLOSEDATA comment
    (22) onlydata -> OPENDATA GARBAGE . GARBAGE CLOSEDATA comment

    CONTENT         shift and go to state 40
    GARBAGE         shift and go to state 39


state 34

    (23) onlydata -> OPENDATA CONTENT . CLOSEDATA comment

    CLOSEDATA       shift and go to state 41


state 35

    (20) onlydata -> OPENDATA OPENHREF . CONTENT CLOSEHREF CLOSEDATA comment
    (21) onlydata -> OPENDATA OPENHREF . CONTENT PATTERN CONTENT CLOSEHREF CLOSEDATA comment

    CONTENT         shift and go to state 42


state 36

    (12) getdata -> OPENROW handledata CLOSEROW getdata .

    $end            reduce using rule 12 (getdata -> OPENROW handledata CLOSEROW getdata .)


state 37

    (18) onlydata -> OPENDATA CLOSEDATA comment .

    OPENDATA        reduce using rule 18 (onlydata -> OPENDATA CLOSEDATA comment .)
    CLOSEROW        reduce using rule 18 (onlydata -> OPENDATA CLOSEDATA comment .)


state 38

    (16) comment -> GARBAGE .

    OPENDATA        reduce using rule 16 (comment -> GARBAGE .)
    CLOSEROW        reduce using rule 16 (comment -> GARBAGE .)


state 39

    (22) onlydata -> OPENDATA GARBAGE GARBAGE . CLOSEDATA comment

    CLOSEDATA       shift and go to state 43


state 40

    (19) onlydata -> OPENDATA GARBAGE CONTENT . GARBAGE CLOSEDATA comment

    GARBAGE         shift and go to state 44


state 41

    (23) onlydata -> OPENDATA CONTENT CLOSEDATA . comment
    (16) comment -> . GARBAGE
    (17) comment -> .

    GARBAGE         shift and go to state 38
    OPENDATA        reduce using rule 17 (comment -> .)
    CLOSEROW        reduce using rule 17 (comment -> .)

    comment                        shift and go to state 45

state 42

    (20) onlydata -> OPENDATA OPENHREF CONTENT . CLOSEHREF CLOSEDATA comment
    (21) onlydata -> OPENDATA OPENHREF CONTENT . PATTERN CONTENT CLOSEHREF CLOSEDATA comment

    CLOSEHREF       shift and go to state 46
    PATTERN         shift and go to state 47


state 43

    (22) onlydata -> OPENDATA GARBAGE GARBAGE CLOSEDATA . comment
    (16) comment -> . GARBAGE
    (17) comment -> .

    GARBAGE         shift and go to state 38
    OPENDATA        reduce using rule 17 (comment -> .)
    CLOSEROW        reduce using rule 17 (comment -> .)

    comment                        shift and go to state 48

state 44

    (19) onlydata -> OPENDATA GARBAGE CONTENT GARBAGE . CLOSEDATA comment

    CLOSEDATA       shift and go to state 49


state 45

    (23) onlydata -> OPENDATA CONTENT CLOSEDATA comment .

    OPENDATA        reduce using rule 23 (onlydata -> OPENDATA CONTENT CLOSEDATA comment .)
    CLOSEROW        reduce using rule 23 (onlydata -> OPENDATA CONTENT CLOSEDATA comment .)


state 46

    (20) onlydata -> OPENDATA OPENHREF CONTENT CLOSEHREF . CLOSEDATA comment

    CLOSEDATA       shift and go to state 50


state 47

    (21) onlydata -> OPENDATA OPENHREF CONTENT PATTERN . CONTENT CLOSEHREF CLOSEDATA comment

    CONTENT         shift and go to state 51


state 48

    (22) onlydata -> OPENDATA GARBAGE GARBAGE CLOSEDATA comment .

    OPENDATA        reduce using rule 22 (onlydata -> OPENDATA GARBAGE GARBAGE CLOSEDATA comment .)
    CLOSEROW        reduce using rule 22 (onlydata -> OPENDATA GARBAGE GARBAGE CLOSEDATA comment .)


state 49

    (19) onlydata -> OPENDATA GARBAGE CONTENT GARBAGE CLOSEDATA . comment
    (16) comment -> . GARBAGE
    (17) comment -> .

    GARBAGE         shift and go to state 38
    OPENDATA        reduce using rule 17 (comment -> .)
    CLOSEROW        reduce using rule 17 (comment -> .)

    comment                        shift and go to state 52

state 50

    (20) onlydata -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA . comment
    (16) comment -> . GARBAGE
    (17) comment -> .

    GARBAGE         shift and go to state 38
    OPENDATA        reduce using rule 17 (comment -> .)
    CLOSEROW        reduce using rule 17 (comment -> .)

    comment                        shift and go to state 53

state 51

    (21) onlydata -> OPENDATA OPENHREF CONTENT PATTERN CONTENT . CLOSEHREF CLOSEDATA comment

    CLOSEHREF       shift and go to state 54


state 52

    (19) onlydata -> OPENDATA GARBAGE CONTENT GARBAGE CLOSEDATA comment .

    OPENDATA        reduce using rule 19 (onlydata -> OPENDATA GARBAGE CONTENT GARBAGE CLOSEDATA comment .)
    CLOSEROW        reduce using rule 19 (onlydata -> OPENDATA GARBAGE CONTENT GARBAGE CLOSEDATA comment .)


state 53

    (20) onlydata -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA comment .

    OPENDATA        reduce using rule 20 (onlydata -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA comment .)
    CLOSEROW        reduce using rule 20 (onlydata -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA comment .)


state 54

    (21) onlydata -> OPENDATA OPENHREF CONTENT PATTERN CONTENT CLOSEHREF . CLOSEDATA comment

    CLOSEDATA       shift and go to state 55


state 55

    (21) onlydata -> OPENDATA OPENHREF CONTENT PATTERN CONTENT CLOSEHREF CLOSEDATA . comment
    (16) comment -> . GARBAGE
    (17) comment -> .

    GARBAGE         shift and go to state 38
    OPENDATA        reduce using rule 17 (comment -> .)
    CLOSEROW        reduce using rule 17 (comment -> .)

    comment                        shift and go to state 56

state 56

    (21) onlydata -> OPENDATA OPENHREF CONTENT PATTERN CONTENT CLOSEHREF CLOSEDATA comment .

    OPENDATA        reduce using rule 21 (onlydata -> OPENDATA OPENHREF CONTENT PATTERN CONTENT CLOSEHREF CLOSEDATA comment .)
    CLOSEROW        reduce using rule 21 (onlydata -> OPENDATA OPENHREF CONTENT PATTERN CONTENT CLOSEHREF CLOSEDATA comment .)

